feature: RouteParser, RouteType, RouteColor + add all routes to factory #33